--- a/index.html
+++ b/index.html
@@ -7,15 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div id="page">
 
-
-        <div></div>
+    <div id="page">
+        <div id="content">
+    <div class="container">
+        <h1>
+            <p><b>Keeping</b></p> 
+            <p><b>your company always</b></p> 
+            <p><b>connected</b></p>
+        </h1>
+        <h2>
+            <p>Conquer the challenges of today's business world with</p>
+            <p>innovative tech solutions that put you in control of your</p>
+            <p>proffessional future</p>
+    
+        </h2>
+        <br>
+        <h3>Lets get started</h3>
+</div>
+  <div>
         <div  id="image">
             <img src="./images/hero_image.png" alt="" id="image">
         </image>
     </div>
 </div>
+        </div>
+    </div>
 </body>
 </html>
