--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div id="page">
+        <ul>
+            <li><a href="#home">hyra App</a></li>
+            <li><a href="#news">hyra Score</a></li>
+                <button type="submit">Join the waitlist</button>
+          </ul>
         <div id="content">
     <div class="container">
         <h1>
